de.tgremple.siteanalyser.configuration.language.parent/de.tgremple.siteanalyser.configuration.language.idea/src-gen/de/tgremple/siteanalyser/configuration/idea/parser/antlr/internal/PsiInternalConfigurationLanguageParser.java
package de.tgremple.siteanalyser.configuration.idea.parser.antlr.internal;

import org.eclipse.xtext.idea.parser.AbstractPsiAntlrParser;
import de.tgremple.siteanalyser.configuration.idea.lang.ConfigurationLanguageElementTypeProvider;
import org.eclipse.xtext.idea.parser.TokenTypeProvider;
import org.eclipse.xtext.parser.antlr.XtextTokenStream;
import org.eclipse.xtext.parser.antlr.XtextTokenStream.HiddenTokens;
import de.tgremple.siteanalyser.configuration.services.ConfigurationLanguageGrammarAccess;

import com.intellij.lang.PsiBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class PsiInternalConfigurationLanguageParser extends AbstractPsiAntlrParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_ID", "RULE_STRING", "RULE_INT", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "RULE_WS", "RULE_ANY_OTHER", "'content'", "'type'", "'is'", "'recognized'", "'by'", "'recognize'", "'page'", "'css'", "'url'", "'pattern'", "'as'"
    };
    public static final int RULE_STRING=5;
    public static final int RULE_SL_COMMENT=8;
    public static final int T__19=19;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int EOF=-1;
    public static final int RULE_ID=4;
    public static final int RULE_WS=9;
    public static final int RULE_ANY_OTHER=10;
    public static final int RULE_INT=6;
    public static final int RULE_ML_COMMENT=7;
    public static final int T__20=20;
    public static final int T__21=21;

    // delegates
    // delegators


        public PsiInternalConfigurationLanguageParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PsiInternalConfigurationLanguageParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PsiInternalConfigurationLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "PsiInternalConfigurationLanguage.g"; }



    	protected ConfigurationLanguageGrammarAccess grammarAccess;

    	protected ConfigurationLanguageElementTypeProvider elementTypeProvider;

    	public PsiInternalConfigurationLanguageParser(PsiBuilder builder, TokenStream input, ConfigurationLanguageElementTypeProvider elementTypeProvider, ConfigurationLanguageGrammarAccess grammarAccess) {
    		this(input);
    		setPsiBuilder(builder);
    		this.grammarAccess = grammarAccess;
    		this.elementTypeProvider = elementTypeProvider;
    	}

    	@Override
    	protected String getFirstRuleName() {
    		return "SiteStructure";
    	}




    // $ANTLR start "entryRuleSiteStructure"
    // PsiInternalConfigurationLanguage.g:52:1: entryRuleSiteStructure returns [Boolean current=false] : iv_ruleSiteStructure= ruleSiteStructure EOF ;
    public final Boolean entryRuleSiteStructure() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleSiteStructure = null;


        try {
            // PsiInternalConfigurationLanguage.g:52:55: (iv_ruleSiteStructure= ruleSiteStructure EOF )
            // PsiInternalConfigurationLanguage.g:53:2: iv_ruleSiteStructure= ruleSiteStructure EOF
            {
             markComposite(elementTypeProvider.getSiteStructureElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleSiteStructure=ruleSiteStructure();

            state._fsp--;

             current =iv_ruleSiteStructure; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleSiteStructure"


    // $ANTLR start "ruleSiteStructure"
    // PsiInternalConfigurationLanguage.g:59:1: ruleSiteStructure returns [Boolean current=false] : ( (lv_typeDefinitions_0_0= ruleType ) )* ;
    public final Boolean ruleSiteStructure() throws RecognitionException {
        Boolean current = false;

        Boolean lv_typeDefinitions_0_0 = null;


        try {
            // PsiInternalConfigurationLanguage.g:60:1: ( ( (lv_typeDefinitions_0_0= ruleType ) )* )
            // PsiInternalConfigurationLanguage.g:61:2: ( (lv_typeDefinitions_0_0= ruleType ) )*
            {
            // PsiInternalConfigurationLanguage.g:61:2: ( (lv_typeDefinitions_0_0= ruleType ) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==11||LA1_0==17) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // PsiInternalConfigurationLanguage.g:62:3: (lv_typeDefinitions_0_0= ruleType )
            	    {
            	    // PsiInternalConfigurationLanguage.g:62:3: (lv_typeDefinitions_0_0= ruleType )
            	    // PsiInternalConfigurationLanguage.g:63:4: lv_typeDefinitions_0_0= ruleType
            	    {

            	    				markComposite(elementTypeProvider.getSiteStructure_TypeDefinitionsTypeParserRuleCall_0ElementType());
            	    			
            	    pushFollow(FOLLOW_3);
            	    lv_typeDefinitions_0_0=ruleType();

            	    state._fsp--;


            	    				doneComposite();
            	    				if(!current) {
            	    					associateWithSemanticElement();
            	    					current = true;
            	    				}
            	    			

            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "ruleSiteStructure"


    // $ANTLR start "entryRuleType"
    // PsiInternalConfigurationLanguage.g:79:1: entryRuleType returns [Boolean current=false] : iv_ruleType= ruleType EOF ;
    public final Boolean entryRuleType() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleType = null;


        try {
            // PsiInternalConfigurationLanguage.g:79:46: (iv_ruleType= ruleType EOF )
            // PsiInternalConfigurationLanguage.g:80:2: iv_ruleType= ruleType EOF
            {
             markComposite(elementTypeProvider.getTypeElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleType=ruleType();

            state._fsp--;

             current =iv_ruleType; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleType"


    // $ANTLR start "ruleType"
    // PsiInternalConfigurationLanguage.g:86:1: ruleType returns [Boolean current=false] : (this_ContentType_0= ruleContentType | this_PageType_1= rulePageType ) ;
    public final Boolean ruleType() throws RecognitionException {
        Boolean current = false;

        Boolean this_ContentType_0 = null;

        Boolean this_PageType_1 = null;


        try {
            // PsiInternalConfigurationLanguage.g:87:1: ( (this_ContentType_0= ruleContentType | this_PageType_1= rulePageType ) )
            // PsiInternalConfigurationLanguage.g:88:2: (this_ContentType_0= ruleContentType | this_PageType_1= rulePageType )
            {
            // PsiInternalConfigurationLanguage.g:88:2: (this_ContentType_0= ruleContentType | this_PageType_1= rulePageType )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==11) ) {
                alt2=1;
            }
            else if ( (LA2_0==17) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // PsiInternalConfigurationLanguage.g:89:3: this_ContentType_0= ruleContentType
                    {

                    			markComposite(elementTypeProvider.getType_ContentTypeParserRuleCall_0ElementType());
                    		
                    pushFollow(FOLLOW_2);
                    this_ContentType_0=ruleContentType();

                    state._fsp--;


                    			current = this_ContentType_0;
                    			doneComposite();
                    		

                    }
                    break;
                case 2 :
                    // PsiInternalConfigurationLanguage.g:98:3: this_PageType_1= rulePageType
                    {

                    			markComposite(elementTypeProvider.getType_PageTypeParserRuleCall_1ElementType());
                    		
                    pushFollow(FOLLOW_2);
                    this_PageType_1=rulePageType();

                    state._fsp--;


                    			current = this_PageType_1;
                    			doneComposite();
                    		

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "ruleType"


    // $ANTLR start "entryRuleContentType"
    // PsiInternalConfigurationLanguage.g:110:1: entryRuleContentType returns [Boolean current=false] : iv_ruleContentType= ruleContentType EOF ;
    public final Boolean entryRuleContentType() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleContentType = null;


        try {
            // PsiInternalConfigurationLanguage.g:110:53: (iv_ruleContentType= ruleContentType EOF )
            // PsiInternalConfigurationLanguage.g:111:2: iv_ruleContentType= ruleContentType EOF
            {
             markComposite(elementTypeProvider.getContentTypeElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleContentType=ruleContentType();

            state._fsp--;

             current =iv_ruleContentType; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleContentType"


    // $ANTLR start "ruleContentType"
    // PsiInternalConfigurationLanguage.g:117:1: ruleContentType returns [Boolean current=false] : (otherlv_0= 'content' otherlv_1= 'type' ( (lv_name_2_0= RULE_ID ) ) otherlv_3= 'is' otherlv_4= 'recognized' otherlv_5= 'by' ( (lv_selector_6_0= ruleContentSelector ) ) (otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )* )? ) ;
    public final Boolean ruleContentType() throws RecognitionException {
        Boolean current = false;

        Token otherlv_0=null;
        Token otherlv_1=null;
        Token lv_name_2_0=null;
        Token otherlv_3=null;
        Token otherlv_4=null;
        Token otherlv_5=null;
        Token otherlv_7=null;
        Boolean lv_selector_6_0 = null;

        Boolean lv_properties_8_0 = null;


        try {
            // PsiInternalConfigurationLanguage.g:118:1: ( (otherlv_0= 'content' otherlv_1= 'type' ( (lv_name_2_0= RULE_ID ) ) otherlv_3= 'is' otherlv_4= 'recognized' otherlv_5= 'by' ( (lv_selector_6_0= ruleContentSelector ) ) (otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )* )? ) )
            // PsiInternalConfigurationLanguage.g:119:2: (otherlv_0= 'content' otherlv_1= 'type' ( (lv_name_2_0= RULE_ID ) ) otherlv_3= 'is' otherlv_4= 'recognized' otherlv_5= 'by' ( (lv_selector_6_0= ruleContentSelector ) ) (otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )* )? )
            {
            // PsiInternalConfigurationLanguage.g:119:2: (otherlv_0= 'content' otherlv_1= 'type' ( (lv_name_2_0= RULE_ID ) ) otherlv_3= 'is' otherlv_4= 'recognized' otherlv_5= 'by' ( (lv_selector_6_0= ruleContentSelector ) ) (otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )* )? )
            // PsiInternalConfigurationLanguage.g:120:3: otherlv_0= 'content' otherlv_1= 'type' ( (lv_name_2_0= RULE_ID ) ) otherlv_3= 'is' otherlv_4= 'recognized' otherlv_5= 'by' ( (lv_selector_6_0= ruleContentSelector ) ) (otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )* )?
            {

            			markLeaf(elementTypeProvider.getContentType_ContentKeyword_0ElementType());
            		
            otherlv_0=(Token)match(input,11,FOLLOW_4); 

            			doneLeaf(otherlv_0);
            		

            			markLeaf(elementTypeProvider.getContentType_TypeKeyword_1ElementType());
            		
            otherlv_1=(Token)match(input,12,FOLLOW_5); 

            			doneLeaf(otherlv_1);
            		
            // PsiInternalConfigurationLanguage.g:134:3: ( (lv_name_2_0= RULE_ID ) )
            // PsiInternalConfigurationLanguage.g:135:4: (lv_name_2_0= RULE_ID )
            {
            // PsiInternalConfigurationLanguage.g:135:4: (lv_name_2_0= RULE_ID )
            // PsiInternalConfigurationLanguage.g:136:5: lv_name_2_0= RULE_ID
            {

            					markLeaf(elementTypeProvider.getContentType_NameIDTerminalRuleCall_2_0ElementType());
            				
            lv_name_2_0=(Token)match(input,RULE_ID,FOLLOW_6); 

            					if(!current) {
            						associateWithSemanticElement();
            						current = true;
            					}
            				

            					doneLeaf(lv_name_2_0);
            				

            }


            }


            			markLeaf(elementTypeProvider.getContentType_IsKeyword_3ElementType());
            		
            otherlv_3=(Token)match(input,13,FOLLOW_7); 

            			doneLeaf(otherlv_3);
            		

            			markLeaf(elementTypeProvider.getContentType_RecognizedKeyword_4ElementType());
            		
            otherlv_4=(Token)match(input,14,FOLLOW_8); 

            			doneLeaf(otherlv_4);
            		

            			markLeaf(elementTypeProvider.getContentType_ByKeyword_5ElementType());
            		
            otherlv_5=(Token)match(input,15,FOLLOW_9); 

            			doneLeaf(otherlv_5);
            		
            // PsiInternalConfigurationLanguage.g:172:3: ( (lv_selector_6_0= ruleContentSelector ) )
            // PsiInternalConfigurationLanguage.g:173:4: (lv_selector_6_0= ruleContentSelector )
            {
            // PsiInternalConfigurationLanguage.g:173:4: (lv_selector_6_0= ruleContentSelector )
            // PsiInternalConfigurationLanguage.g:174:5: lv_selector_6_0= ruleContentSelector
            {

            					markComposite(elementTypeProvider.getContentType_SelectorContentSelectorParserRuleCall_6_0ElementType());
            				
            pushFollow(FOLLOW_10);
            lv_selector_6_0=ruleContentSelector();

            state._fsp--;


            					doneComposite();
            					if(!current) {
            						associateWithSemanticElement();
            						current = true;
            					}
            				

            }


            }

            // PsiInternalConfigurationLanguage.g:187:3: (otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==16) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // PsiInternalConfigurationLanguage.g:188:4: otherlv_7= 'recognize' ( (lv_properties_8_0= ruleProperty ) )*
                    {

                    				markLeaf(elementTypeProvider.getContentType_RecognizeKeyword_7_0ElementType());
                    			
                    otherlv_7=(Token)match(input,16,FOLLOW_11); 

                    				doneLeaf(otherlv_7);
                    			
                    // PsiInternalConfigurationLanguage.g:195:4: ( (lv_properties_8_0= ruleProperty ) )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==RULE_ID) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // PsiInternalConfigurationLanguage.g:196:5: (lv_properties_8_0= ruleProperty )
                    	    {
                    	    // PsiInternalConfigurationLanguage.g:196:5: (lv_properties_8_0= ruleProperty )
                    	    // PsiInternalConfigurationLanguage.g:197:6: lv_properties_8_0= ruleProperty
                    	    {

                    	    						markComposite(elementTypeProvider.getContentType_PropertiesPropertyParserRuleCall_7_1_0ElementType());
                    	    					
                    	    pushFollow(FOLLOW_11);
                    	    lv_properties_8_0=ruleProperty();

                    	    state._fsp--;


                    	    						doneComposite();
                    	    						if(!current) {
                    	    							associateWithSemanticElement();
                    	    							current = true;
                    	    						}
                    	    					

                    	    }


                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "ruleContentType"


    // $ANTLR start "entryRulePageType"
    // PsiInternalConfigurationLanguage.g:215:1: entryRulePageType returns [Boolean current=false] : iv_rulePageType= rulePageType EOF ;
    public final Boolean entryRulePageType() throws RecognitionException {
        Boolean current = false;

        Boolean iv_rulePageType = null;

